# EuclidFS

./: .env.example  add_mag_to_files.py  partition_files.py  pyproject.toml
jobs/: add_mag.job  add_w_mag.job  coquille.job  lrg_colour_cuts.job  mag_vs_redshift.job  mag_vs_z_array.job  merge_cats.job  partition.job  try_cuts.job  visualize-df.job
results/20260511_142447_lrg_colour_cuts/: summary_stats.csv
scripts/: add_w_mag.py  follow_logs.sh  lrg_colour_cuts.py  mag_vs_redshift.py  merge_cats.py  merge_cats_duckdb.py  try_cuts.py  visualize_df.py
src/EuclidFS/: colour_cuts.py  config.py  data.py  histogram.py
